
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






struct sockaddr_in {int sin_port; int sin_addr; int sin_family; } ;
struct sockaddr {int dummy; } ;
struct hostent {int h_length; int h_addr; } ;
typedef int server ;


 int AF_INET ;
 int PF_INET ;
 int SOCK_STREAM ;
 scalar_t__ connect (int,struct sockaddr*,int) ;
 struct hostent* gethostbyname (char*) ;
 int htons (int) ;
 int memcpy (int *,int ,int ) ;
 int socket (int ,int ,int ) ;

int ConectToHost(char *Host,int Port)
{
 struct sockaddr_in server;
 struct hostent *hp;
 int s;

 server.sin_family = AF_INET;
 hp = gethostbyname(Host);
 if(!hp) return(-1);

 memcpy(&server.sin_addr,hp->h_addr,hp->h_length);
 server.sin_port = htons(Port);

 s = socket(PF_INET,SOCK_STREAM,0);
 if(connect(s,(struct sockaddr *)&server, sizeof(server)) < 0)
  return(-1);

 return(s);
}
